--- a/home.css
+++ b/home.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url('./bg3.jpg') no-repeat center fixed;
+    background: url('./bg8.png') no-repeat center fixed;
     background-size: cover;
 }
 
